--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "supabase:pull": "npx supabase db pull"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
@@ -31,6 +33,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "0.330.0",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-merge-refs": "^2.1.1",
