fix UI and add ai bert word explanation

--- a/.env.local.example
+++ b/.env.local.example
@@ -13,3 +13,9 @@ STRIPE_WEBHOOK_SECRET=
 # Dictionary api key
 MERRIAM_DICTIONARY_API_KEY=
 MERRIAM_THESAURUS_API_KEY=
+
+# Hugging face api key
+HUGGINGFACE_API_KEY=
+
+# OCR FREE API KEY
+OCR_API_KEY=
