--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "supabase:pull": "npx supabase db pull"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.8.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@stripe/stripe-js": "2.4.0",
@@ -32,15 +37,19 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "0.330.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "puppeteer": "^23.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-merge-refs": "^2.1.1",
     "stripe": "^14.25.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tesseract.js": "^5.1.1",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
