--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ MERRIAM_DICTIONARY_API_KEY=
 MERRIAM_THESAURUS_API_KEY=
 
 # Hugging face api key
-HUGGINGFACE_API_KEY=
+HUGGINGFACE_TOKEN=
 
 # OCR FREE API KEY
 OCR_API_KEY=
