--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,84 @@ yarn-error.log*
 # certificates
 certificates
 .env*.local
+
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Virtual environment directories
+venv/
+env/
+ENV/
+.venv/
+.ENV/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# IDE specific settings (optional)
+.vscode/
+.idea/
+
+# Log files
+*.log
+
+# Distribution / Packaging
+build/
+dist/
+*.egg-info/
+.eggs/
+MANIFEST
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+coverage.*
+*.cover
+*.py,cover
+.cache
+nosetests.xml
+coverage.xml
+*.lcov
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Pyre type checker
+.pyre/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pylint
+.pylint.d/
+
+# pyright
+.pyright/
+
+# pytest
+.pytest_cache/
+
+# SQLite database files
+*.sqlite3
+
+# MacOS specific files
+.DS_Store
+
+# Windows specific files
+Thumbs.db
