--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
     "start": "next start",
+    "next-dev": "next dev --turbo",
+    "build": "next build",
     "lint": "next lint",
+    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn app.api.python.fastapi.index:app --reload",
+    "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
     "prettier-fix": "prettier --write .",
     "stripe:login": "stripe login",
     "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks",
@@ -22,7 +24,6 @@
     "supabase:pull": "npx supabase db pull"
   },
   "dependencies": {
-    "@huggingface/inference": "^2.8.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
@@ -56,6 +57,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "concurrently": "^9.0.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
