--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,5 @@ OCR_API_KEY=
 SUPABASE_AUTH_EXTERNAL_GITHUB_REDIRECT_URI="http://127.0.0.1:54321/auth/v1/callback"
 SUPABASE_AUTH_EXTERNAL_GITHUB_CLIENT_ID=
 SUPABASE_AUTH_EXTERNAL_GITHUB_SECRET=
+
+CHROME_EXECUTABLE_PATH=
