--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "next-dev": "next dev --turbo",
     "build": "next build",
     "lint": "next lint",
-    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn app.api.python.fastapi.index:app --reload",
+    "fastapi-dev": "python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt && python3 -m uvicorn app.api.python.fastapi.index:app --reload",
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
     "prettier-fix": "prettier --write .",
     "stripe:login": "stripe login",
@@ -31,6 +31,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
+    "@sparticuz/chromium-min": "130.0.0",
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.43.4",
@@ -41,7 +42,7 @@
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-    "puppeteer": "^23.5.3",
+    "puppeteer-core": "23.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-merge-refs": "^2.1.1",
