--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "next-dev": "next dev --turbo",
     "build": "next build",
     "lint": "next lint",
-    "fastapi-dev": "python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt && python3 -m uvicorn api.python.fastapi.index:app --reload",
+    "fastapi-dev": "python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt && python3 -m uvicorn api.python.fastapi.index:app --reload --log-level debug",
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
     "prettier-fix": "prettier --write .",
     "stripe:login": "stripe login",
@@ -35,14 +35,17 @@
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.43.4",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "0.330.0",
+    "lz-string": "^1.5.0",
     "nanoid": "^5.0.7",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "puppeteer-core": "23.6.0",
+    "randomcolor": "^0.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-merge-refs": "^2.1.1",
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@types/randomcolor": "^0.5.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
