--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,43 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+async-timeout==4.0.3
+attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 exceptiongroup==1.2.2
 fastapi==0.115.3
 filelock==3.16.1
+frozenlist==1.5.0
 fsspec==2024.10.0
 h11==0.14.0
+httpcore==1.0.6
 httptools==0.6.4
+httpx==0.27.2
 huggingface-hub==0.26.1
 idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.15
+langchain-nvidia-ai-endpoints==0.3.3
+langsmith==0.1.140
+multidict==6.1.0
+orjson==3.10.11
 packaging==24.1
+pillow==10.4.0
+propcache==0.2.0
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
 PyYAML==6.0.2
 requests==2.32.3
+requests-toolbelt==1.0.0
 sniffio==1.3.1
 starlette==0.41.0
+tenacity==9.0.0
 tqdm==4.66.5
 typing_extensions==4.12.2
 urllib3==1.26.6
@@ -26,3 +45,4 @@ uvicorn==0.32.0
 uvloop==0.21.0
 watchfiles==0.24.0
 websockets==13.1
+yarl==1.17.1
