--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "next-dev": "next dev --turbo",
     "build": "next build",
     "lint": "next lint",
-    "fastapi-dev": "python3 -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt && python3 -m uvicorn api.python.fastapi.index:app --reload --log-level debug",
+    "fastapi-dev": "python3 -m venv .venv && source .venv/bin/activate && pip3 install -r requirements.txt && python3 -m uvicorn api.python.fastapi.index:app --reload --log-level debug",
     "dev": "concurrently \"pnpm run next-dev\" \"pnpm run fastapi-dev\"",
     "prettier-fix": "prettier --write .",
     "stripe:login": "stripe login",
