--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.3.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
@@ -19,26 +20,37 @@ httptools==0.6.4
 httpx==0.27.2
 huggingface-hub==0.26.1
 idna==3.10
+Jinja2==3.1.5
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain-core==0.3.15
-langchain-nvidia-ai-endpoints==0.3.3
-langsmith==0.1.140
+MarkupSafe==3.0.2
+mpmath==1.3.0
 multidict==6.1.0
+networkx==3.4.2
+numpy==2.2.2
 orjson==3.10.11
 packaging==24.1
 pillow==10.4.0
 propcache==0.2.0
+protobuf==5.29.3
+psutil==6.1.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
 PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+safetensors==0.5.2
+sentencepiece==0.2.0
 sniffio==1.3.1
 starlette==0.41.0
+sympy==1.13.1
 tenacity==9.0.0
+tokenizers==0.21.0
+torch==2.5.1
 tqdm==4.66.5
+transformers==4.48.1
 typing_extensions==4.12.2
 urllib3==1.26.6
 uvicorn==0.32.0
