--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,23 @@
+annotated-types==0.7.0
+anyio==4.8.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
 fastapi==0.115.3
+filelock==3.17.0
+fsspec==2024.12.0
+h11==0.14.0
 huggingface-hub==0.26.1
+idna==3.10
+packaging==24.2
 pydantic==2.9.2
+pydantic_core==2.23.4
 python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.32.3
+sniffio==1.3.1
+starlette==0.41.3
+tqdm==4.67.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
