--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,18 @@ fastapi==0.115.3
 filelock==3.17.0
 fsspec==2024.12.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.26.1
 idna==3.10
+iniconfig==2.0.0
 packaging==24.2
+pluggy==1.5.0
 pydantic==2.9.2
 pydantic_core==2.23.4
+pytest==8.3.5
+pytest-asyncio==0.25.3
+pytest-mock==3.14.0
 python-dotenv==1.0.1
 PyYAML==6.0.2
 requests==2.32.3
